--- a/cat-home/src/main/webapp/WEB-INF/web.xml
+++ b/cat-home/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet>
+		<servlet-name>cat-mail-servlet</servlet-name>
+		<servlet-class>com.dianping.cat.servlet.CatMailServlet</servlet-class>
+		<load-on-startup>3</load-on-startup>
+	</servlet>
+	<servlet>
 		<servlet-name>mvc-servlet</servlet-name>
 		<servlet-class>org.unidal.web.MVC</servlet-class>
 		<init-param>
@@ -56,6 +61,12 @@
 		<servlet-name>mvc-servlet</servlet-name>
 		<url-pattern>/s/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>cat-mail-servlet</servlet-name>
+		<url-pattern>/mail/*</url-pattern>
+	</servlet-mapping>
+	
 	<jsp-config>
 		<taglib>
 			<taglib-uri>/WEB-INF/app.tld</taglib-uri>
