--- a/框架埋点方案集成/dubbo/pom.xml
+++ b/框架埋点方案集成/dubbo/pom.xml
@@ -11,12 +11,18 @@
 
     <groupId>net.dubboclub</groupId>
     <artifactId>cat-monitor</artifactId>
+    <version>0.0.7</version>
 
     <dependencies>
         <dependency>
             <groupId>com.dianping.cat</groupId>
             <artifactId>cat-client</artifactId>
             <version>1.4.0</version>
+        </dependency>
+        <dependency>
+       		<groupId>com.alibaba</groupId> 
+       		<artifactId>fastjson</artifactId>
+       		<version>1.2.28</version>
         </dependency>
     </dependencies>
 
